saftey and compliance redesign pages

--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -239,6 +239,7 @@
                         <li>If more than one ingredient matches is found in a product, we list them all, even if repeated (as demonstrated the first record)</li>
                         <li>The search input would persist (as like the current cosmetics search), and show in the search input field when page returned results</li>
                         <li>The page design shows filter 'Notification status': this is for future reference and won't be added to this page until we complete the 'Archive' epic</li>
+                        <li>Update the results statement to highlight if an exact or any work search was run: "19 notifications with ingredients matching the search <b>Consectetur Lorem Etilee</b>, using the current filters - with match type set to <b>exact</b> word match - were found."</li>
                     </ol>                    
                 </li>
                 <li>
@@ -249,6 +250,7 @@
                         <li>
                             On this version, the ingredient matches shown in the results are seperated by commas (with a fullstop at the end)
                         </li>
+                        <li>Update the results statement to highlight if an exact or any work search was run: "6 notifications with ingredients matching the search <b>Consectetur lorem etilee</b>, using the current filters - with match type set to <b>any</b> word match - were found."</li>
                     </ol>                     
                 </li>
                 <li>
