--- a/app/views/psd-revised-flow/case-opss-landing-team-not-added-to-case.html
+++ b/app/views/psd-revised-flow/case-opss-landing-team-not-added-to-case.html
@@ -67,21 +67,13 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Description
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    Dyson vacuum cleaner, washing machine - electric shock hazard
-                </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
+<dt class="govuk-summary-list__key">
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    OPSS user: what is being alleged, shows here on current service. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero sunt voluptatum cumque illo voluptates officia quasi. 
+                                        <!-- opss user: what is being alleged, shows here on current service -->
                 </dd>
-            </div>
+            </div>          
             <div class="govuk-summary-list__row opss-summary-list__row--split">
                 <dt class="govuk-summary-list__key">
                     Status
@@ -165,17 +157,21 @@
             </div>
         </dl>
 
-        <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-9">
+        <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-6 opss-float-left">
             Safety and compliance
         </h3>
+        
+        <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
+            Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
+        </a>                              
 
         <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
+                                <dt class="govuk-summary-list__key">
                     Reported as
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Unsafe
+                    Product reported because it is unsafe
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
