--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -100,26 +100,18 @@
                 </dd>
             </div-->
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Description
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    Dyson vacuum cleaner, washing machine - electric shock hazard
-                </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
+<dt class="govuk-summary-list__key">
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero sunt voluptatum cumque illo voluptates officia quasi, libero facilis quidem nulla placeat quas aliquid dolore, saepe hic sit exercitationem? Veniam. <!-- opss user: what is being alleged, shows here on current service -->
+                                        <!-- opss user: what is being alleged, shows here on current service -->
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the summary</span>
+                            <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the summary</span>                                
                     </a>
                 </dd>
-            </div>
+            </div>          
             <div class="govuk-summary-list__row opss-summary-list__row--split">
                 <dt class="govuk-summary-list__key">
                     Status
@@ -238,21 +230,25 @@
             </div>
         </dl>
 
-        <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-9">
+        <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-6 opss-float-left">
             Safety and compliance
         </h3>
+        
+        <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
+            Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
+        </a>                              
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
+                                <dt class="govuk-summary-list__key">
                     Reported as
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Unsafe
+                    Product reported as unsafe
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Change<span class="govuk-visually-hidden"> the reported safety</span>
+                        Change<span class="govuk-visually-hidden"> the report reason</span>
                     </a>
                 </dd>
             </div>
@@ -262,12 +258,7 @@
                 </dt>
                 <dd class="govuk-summary-list__value">
                     Electric shock
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Change<span class="govuk-visually-hidden"> the primary hazard</span>
-                    </a>
-                </dd>
+                                </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
