--- a/app/views/psd-revised-flow/case-trading-stds-landing-summary.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-summary.html
@@ -1,4 +1,4 @@
-{% extends "layout-01.html" %}
+{% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
     Case 2101-0008
@@ -93,19 +93,18 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-<dt class="govuk-summary-list__key">
+                <dt class="govuk-summary-list__key">
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                                        
-                    <!-- opss user: what is being alleged, shows here on current service -->
+                    
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                            <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the summary</span>                                
+                    <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the summary</span>
                     </a>
                 </dd>
-            </div>          
+            </div>            
             <div class="govuk-summary-list__row opss-summary-list__row--split">
                 <dt class="govuk-summary-list__key">
                     Status
@@ -239,11 +238,11 @@
         
         <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
-        </a>                              
+        </a>
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
             <div class="govuk-summary-list__row">
-                                <dt class="govuk-summary-list__key">
+                <dt class="govuk-summary-list__key">
                     Reported as
                 </dt>
                 <dd class="govuk-summary-list__value">
@@ -256,7 +255,7 @@
                 </dt>
                 <dd class="govuk-summary-list__value">
                     Electric shock
-                                </dd>
+                </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
@@ -264,7 +263,7 @@
                 </dt>
                 <dd class="govuk-summary-list__value">
                     Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
-                                </dd>
+                </dd>
             </div>
         </dl>
 
