--- a/app/views/psd-revised-flow/inc_case_content_1.html
+++ b/app/views/psd-revised-flow/inc_case_content_1.html
@@ -17,26 +17,17 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Description
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    Dyson vacuum cleaner, washing machine - electric shock hazard
-                </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
+<dt class="govuk-summary-list__key">
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero sunt voluptatum cumque illo voluptates officia quasi, libero facilis quidem nulla placeat quas aliquid dolore, saepe hic sit exercitationem? Veniam.
-                </dd>
+                                        
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the summary</span>
+                            <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the summary</span>                                
                     </a>
                 </dd>
-            </div>
+            </div>          
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Last updated</dt>
                 <dd class="govuk-summary-list__value">About 8 hours ago</dd>
