--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -115,12 +115,11 @@
                 </ul>                 
             </li>
             <li>
-                <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/#" target="_blank">Confirmation page - case created
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-created-confirmation.html" target="_blank">Confirmation page - case created
                 </a>
                 <br><span class="govuk-!-font-size-16">New <abbr>HTML</abbr> design for current confirmation page</span>. 
             </li>                       
         </ol>   
-        
         
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">       
 
@@ -130,6 +129,34 @@
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing.html" target="_blank">Case page</a>
                 <br><span class="govuk-!-font-size-16">Typical example</span>.
+
+                <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
+                    <li>Case pages - Summary field no longer prepopulated with 'reported as' text statement. (New designs are compatible with old cases).[<i><abbr>OPSS</abbr> users still: "what is being alleged", continues to show here on current service</i>]</li>
+                    <li>
+                        "Reported as" now to show text, 1 of 4 variations: 1) Product reported as unsafe 2). Product reported as non-compliant 3). Product reported as unsafe and non-compliant 4). Product reported as safe and compliant
+                    </li>                    
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-summary.html" target="_blank">Edit Safety and compliance</a>
+                        <br><span class="govuk-!-font-size-16">The one edit link for editing Safety and compliance information, opens ...</span>. 
+
+                        <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
+                            <li>
+                                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/edit-why-are-you-creating-a-case.html" target="_blank">How is the product being reported</a>
+                                <br><span class="govuk-!-font-size-16">The form has one pre-selected option based on the current saftey setting. If the user selects the 4th (is safe) option, we save the selection (delete any related info associated with the other options) and return the user directly back to the <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-updated.html" target="_blank">cases page with success banner</a>. Choosing any of the other options sets up the next page ... </span>
+                            </li>
+                            <li>
+                                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/edit-why-is-the-product-of-concern.html" target="_blank">Why is the product of concern - edit version</a>
+                                <br><span class="govuk-!-font-size-16">{Continued} ... with pre-selected where relevant (to reveal their subset forms). Both checkboxes are always <u>disabled</u> (whether pre-selected or not). Any previously captured data for either option pre-populates the forms. The user can 'Cancel' (returning to the cases page). 'Save' saves the inputs and returns the user to the cases page with success banner. Error messages capture any blank fields on submit: 1. Select a primary hazard 2. Enter a reason why the product is unsafe 3. Enter a reason why the product is non-compliant </span>
+                            </li>
+                            <li>
+                                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-updated.html" target="_blank">Success - Case information updated</a>
+                                <br><span class="govuk-!-font-size-16">This simply maintains the current functionality with a generic confirmation statement</span>.
+                            </li>
+                            
+                        </ul>
+                    </li>
+
+                </ul>                
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-different-team.html" target="_blank">Case page - visitor</a>
