--- a/app/views/psd-revised-flow/what-is-the-case-name-error.html
+++ b/app/views/psd-revised-flow/what-is-the-case-name-error.html
@@ -41,11 +41,9 @@
                     </label>
                 </h1>
 
-                <div id="case-name-hint" class="govuk-hint govuk-!-margin-bottom-2">
-                    <span class="govuk-!-display-block govuk-!-margin-bottom-6">Give the case a short descriptive title. For example, &quot;Overheating handheld Minolta camera&quot;. </span>
-
-                    <span class="govuk-!-display-block govuk-!-font-size-16">The case name will be permanent and <strong>can not</strong> be edited.</span>
-                </div>
+                <div id="case-name-hint" class="govuk-hint govuk-!-margin-bottom-5">
+                  Give the case a short descriptive title. For example, &quot;Overheating handheld Minolta camera&quot;. 
+                </div>   
 
                 <p id="case-name-error" class="govuk-error-message">
                     <span class="govuk-visually-hidden">Error:</span> The case name has already been used in an open case by your team
