--- a/app/views/psd-revised-flow/what-is-the-case-name.html
+++ b/app/views/psd-revised-flow/what-is-the-case-name.html
@@ -26,11 +26,14 @@
                     </label>
                 </h1>
 
-                <div id="case-name-hint" class="govuk-hint govuk-!-margin-bottom-2">
+                <!--div id="case-name-hint" class="govuk-hint govuk-!-margin-bottom-2">
                     <span class="govuk-!-display-block govuk-!-margin-bottom-6">Give the case a short descriptive title. For example, &quot;Overheating handheld Minolta camera&quot;. </span>
-
                     <span class="govuk-!-display-block govuk-!-font-size-16">The case name will be permanent and <strong>can not</strong> be edited.</span>
-                </div>
+                </div-->
+
+                <div id="case-name-hint" class="govuk-hint govuk-!-margin-bottom-5">
+                    Give the case a short descriptive title. For example, &quot;Overheating handheld Minolta camera&quot;. 
+                </div>                
 
                 <input class="govuk-input  govuk-!-width-two-thirds" id="case-name" name="case-name" type="text" aria-describedby="case-name-hint" spellcheck="false" maxlength="45">
                 <!-- a 45 max character count has been added -->
