--- a/app/views/psd-revised-flow/why-are-you-creating-a-case-error.html
+++ b/app/views/psd-revised-flow/why-are-you-creating-a-case-error.html
@@ -72,7 +72,7 @@
       Continue
     </button>
   
-    <a class="govuk-link" href="#">Cancel</a>
+    <a class="govuk-link govuk-link--no-visited-state" href="#">Cancel</a>
   </div> 
 
 </form>
