--- a/app/assets/sass/opss/_opss-msa.scss
+++ b/app/assets/sass/opss/_opss-msa.scss
@@ -7,7 +7,7 @@
 @import "opss/opss-search";
 @import "opss/opss-pagination";
 
-form.opss-cookie-form {
+form.opss-cookie-form {/*for the cookie banner*/
     display: flex;
 }
 
