new fixes and cases pages

--- a/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
@@ -78,6 +78,11 @@
                 <dd class="govuk-summary-list__value">
                     12345300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading standards reference</span>
                 </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="/psd-revised-flow/edit-reference-number" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the reference number</span>                                
+                    </a>
+                </dd>
             </div>
             <div class="govuk-summary-list__row">
 <dt class="govuk-summary-list__key">
