--- a/app/views/psd-revised-flow/why-is-the-product-of-concern.html
+++ b/app/views/psd-revised-flow/why-is-the-product-of-concern.html
@@ -15,7 +15,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form action="what-is-the-case-name" method="post" novalidate>
+        <form action="do-you-want-to-add-a-ref-number" method="post" novalidate>
 
          
 
