--- a/app/views/psd-revised-flow/case-trading-stds-landing.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing.html
@@ -91,6 +91,11 @@
                 <dd class="govuk-summary-list__value">
                     12345300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading standards reference</span>
                 </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a href="/psd-revised-flow/edit-reference-number" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the reference number</span>                                
+                    </a>
+                </dd>
             </div>
             <div class="govuk-summary-list__row">
 <dt class="govuk-summary-list__key">
@@ -134,11 +139,11 @@
                 <dd class="govuk-summary-list__value">
                     <!--i class="govuk-body-s opss-secondary-text"> --- Omit if no value or UK ---</i-->
                 </dd>
-                <dd class="govuk-summary-list__actions">
+                <!--dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
                         Change<span class="govuk-visually-hidden"> the notifying country</span>
                     </a>
-                </dd>                
+                </dd-->               
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
@@ -177,7 +182,7 @@
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Change<span class="govuk-visually-hidden"> the teams added</span>
+                        Edit<span class="govuk-visually-hidden"> the teams added</span>
                     </a>
                 </dd>
             </div>
