--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -94,12 +94,13 @@
                 </ul>                 
             </li>             
             <li>
-                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/what-is-the-case-name.html" target="_blank">Do you want to add a reference number?</a>
-                <br><span class="govuk-!-font-size-16">A new page (with a pre-existing form element)</span>.
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/do-you-want-to-add-a-ref-number.html" target="_blank">Do you want to add a reference number?</a>
+                <br><span class="govuk-!-font-size-16">A new page (with a pre-existing form element). Yes or No are required fields: "Select yes if you want to add a reference number"</span>.
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
                         <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/do-you-want-to-add-a-ref-number-error.html" target="_blank">Do you want to add a reference number? - error</a>
+                        <br><span class="govuk-!-font-size-16">Error message for drop down number field</span>.
                     </li>
                 </ul>                 
             </li>            
@@ -117,7 +118,7 @@
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-created-confirmation.html" target="_blank">Confirmation page - case created
                 </a>
-                <br><span class="govuk-!-font-size-16">New <abbr>HTML</abbr> design for current confirmation page</span>. 
+                <br><span class="govuk-!-font-size-16">New <abbr>HTML</abbr> design for current confirmation page. (No back link)</span>. 
             </li>                       
         </ol>   
         
@@ -131,7 +132,12 @@
                 <br><span class="govuk-!-font-size-16">Typical example</span>.
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
-                    <li>Case pages - Summary field no longer prepopulated with 'reported as' text statement. (New designs are compatible with old cases).[<i><abbr>OPSS</abbr> users still: "what is being alleged", continues to show here on current service</i>]</li>
+                    <li>
+                        'Reference' can be blank. Reference number can now be edited (don't know why users currently can't?). 'Notifying country' can be blank - if this is because of EU exit we do not need this row? 'Case risk level' link is 'Set' when not, set but changes to 'Change' once set.
+                    </li>
+                    <li>
+                        Case pages - Summary field no longer prepopulated with 'reported as' text statement. (New designs are compatible with old cases).[<i><abbr>OPSS</abbr> users still: "what is being alleged", continues to show here on current service</i>]
+                    </li>
                     <li>
                         "Reported as" now to show text, 1 of 4 variations: 1) Product reported as unsafe 2). Product reported as non-compliant 3). Product reported as unsafe and non-compliant 4). Product reported as safe and compliant
                     </li>                    
@@ -171,8 +177,12 @@
             </li>            
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing_warnings.html" target="_blank">Case page - warning</a>
-                <br><span class="govuk-!-font-size-16">Nothing added yet. Warns that no products, businesses, or assessments have been added</span>.
-            </li>
+                <br><span class="govuk-!-font-size-16">Nothing added yet. Warns that no products, businesses, or assessments have been added. (Warning text and minor label in the Case specific product information section)</span>.
+            </li>            
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-new-case.html" target="_blank">Case page - newly created</a>
+                <br><span class="govuk-!-font-size-16">Shows the case page freshly created with only the standard data gained from the case creation process</span>.
+            </li>            
             <li>
                 <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/#" target="_blank">Case page - restricted view</a>
                 <br><span class="govuk-!-font-size-16">Example of case page with restricted view (+ sub case pages)</span>.
