--- a/app/views/psd-revised-flow/why-is-the-product-of-concern-error.html
+++ b/app/views/psd-revised-flow/why-is-the-product-of-concern-error.html
@@ -26,7 +26,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-        <form action="what-is-the-case-name" method="post" novalidate>
+        <form action="do-you-want-to-add-a-ref-number" method="post" novalidate>
 
 {% set unsafeformHtml %}
     {{ govukSelect({
@@ -36,10 +36,15 @@
             text: "What is the primary hazard?"
         },
         items: [
+        {
+          value: "",
+          text: "",
+          selected: true
+          },
             {
             value: "hazard01",
             text: "Lorem ipsum",
-            selected: true
+            selected: false
             },
             {
             value: "hazard02",
